--- a/part-2-activity/scss/style.scss
+++ b/part-2-activity/scss/style.scss
@@ -1,7 +1,7 @@
 @import "partials/flashcard";
 
 body {
-  font-family: sans-serif;
+	font-family: sans-serif;
 
-  background-color: #F4FCF8;
+	background-color: #f4fcf8;
 }
